ByteBufferDataInOutput 测试用例